# parallel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  desktop.ini  main.c  parallel.c  schedule ordered.json  schedule unordered.json  schedule.c  schedule.json  schedule2.json  schedule3.json  thread.c  thread_pool.c
.github/workflows/: cmake.yml
include/parallel/: parallel.h  schedule.h  thread.h  thread_pool.h
schema/: schedule-schema.json
